Fix try-runtime features

--- a/pallets/author-inherent/Cargo.toml
+++ b/pallets/author-inherent/Cargo.toml
@@ -50,3 +50,8 @@ runtime-benchmarks = [
 	"frame-benchmarking",
 	"nimbus-primitives/runtime-benchmarks",
 ]
+
+try-runtime = [
+    "frame-system/try-runtime",
+    "frame-support/try-runtime",
+]
