--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ members = [
 
 [profile.release]
 panic = "unwind"
+
+[patch.crates-io]
+substrate-bip39 = { git = "https://github.com/paritytech/substrate-bip39", rev = "e7c751ecb841bd7e5f114bfe5b8b64cfff19f8b8" }
